components/medialib/tests/collada/collada_test1.result
Results of collada_test1:
data/cube.dae(1): warning: not yet implement. Encoding="utf-8"
data/cube.dae(28): error: Unknown animation param, please call to developers
data/cube.dae(37): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(37): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(84): error: Unknown animation param, please call to developers
data/cube.dae(93): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(93): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(93): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(140): error: Unknown animation param, please call to developers
data/cube.dae(149): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(149): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(149): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(196): error: Unknown animation param, please call to developers
data/cube.dae(205): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(205): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(205): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(252): error: Unknown animation param, please call to developers
data/cube.dae(261): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(299): error: Unknown animation param, please call to developers
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(308): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(345): error: Unknown animation param, please call to developers
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(354): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(418): error: Unknown animation param, please call to developers
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(427): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(474): error: Unknown animation param, please call to developers
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(483): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(530): error: Unknown animation param, please call to developers
data/cube.dae(541): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(541): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(596): error: Unknown animation param, please call to developers
data/cube.dae(605): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(605): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(605): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(605): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting
data/cube.dae(605): warning: Using of non-Linear interpolation type not supported. Use exporter options for forced animation converting


---  Collada statistic  ---
anim_lib.size = 9

Line: 15
anim_lib.size = 0
  Channel 0:
    Target __-_Default-fx/common/repeatU:

Line: 71
anim_lib.size = 0
  Channel 0:
    Target __-_Default-fx/common/repeatV:

Line: 127
anim_lib.size = 0
  Channel 0:
    Target __-_Default-fx/common/offsetU:

Line: 183
anim_lib.size = 0
  Channel 0:
    Target __-_Default-fx/common/offsetV:

Line: 239
anim_lib.size = 0
  Channel 0:
    Target Box01-node/translation.X:
  Channel 1:
    Target Box01-node/translation.Y:
  Channel 2:
    Target Box01-node/translation.Z:

Line: 405
anim_lib.size = 0
  Channel 0:
    Target Box01-node/RotZ.ANGLE:

Line: 461
anim_lib.size = 0
  Channel 0:
    Target Box01-node/RotX.ANGLE:

Line: 517
anim_lib.size = 0
  Channel 0:
    Target Box01-node/scale:

Line: 583
anim_lib.size = 0
  Channel 0:
    Target Camera01-camera/xfov:

effect_lib.size = 1
  
Effect: __-_Default-fx
    shader type: blinn
    reflectivity: 1.000000
    transparency: 1.000000
    refraction index: 1.000000
    shininess: 10.000000


Root scene: anim-cube1.max
  nodes count: 3

  Node:
    ID:   Box01-node
    SID:  
    name: Box01
    Content:
      Mesh: Box01-mesh
        surfaces count: 1
          surface 0:
            type: trilist
            vertex count:      24
            index count:       36
            textures count:    1
              channel 0 name:  Box01-mesh-map-channel1
            material name:     __-_Default
            has vertex colors: 0

  Node:
    ID:   Camera01-node
    SID:  
    name: Camera01
    Content:
      Camera: Camera01-camera
        type:   perspective
        znear:  1.000000
        zfar:   1000.000000
        aspect: 1.000000
        xfov:   45.000000
        yfov:   0.000000

  Node:
    ID:   Camera01.Target-node
    SID:  
    name: Camera01.Target
    Content:
